# bls-revisions

./: .env  .gitignore  README.md  mkdocs.yml  pyproject.toml  scratch.ipynb  scratchpad.ipynb
-/ces/cesvinall/: tri_000000_NSA.csv  tri_000000_SA.csv  tri_050000_NSA.csv  tri_050000_SA.csv  tri_060000_NSA.csv  tri_060000_SA.csv  tri_070000_NSA.csv  tri_070000_SA.csv  tri_080000_NSA.csv  tri_080000_SA.csv  tri_100000_NSA.csv  tri_100000_SA.csv  tri_102100_NSA.csv  tri_102100_SA.csv  tri_102110_NSA.csv  tri_102110_SA.csv  tri_102120_NSA.csv  tri_102120_SA.csv  tri_102130_NSA.csv  tri_102130_SA.csv  tri_200000_NSA.csv  tri_200000_SA.csv  tri_202360_NSA.csv  tri_202360_SA.csv  tri_202370_NSA.csv  tri_202370_SA.csv  tri_202380_NSA.csv  tri_202380_SA.csv  tri_300000_NSA.csv  tri_300000_SA.csv  tri_310000_NSA.csv  tri_310000_SA.csv  tri_313210_NSA.csv  tri_313210_SA.csv  tri_313270_NSA.csv  tri_313270_SA.csv  tri_313310_NSA.csv  tri_313310_SA.csv  (+188 more)
-/qcew/: qcew-revisions.csv
.github/workflows/: docs.yml
archive/: ces_national_revisions.ipynb  ces_states_revisions.ipynb  qcew.ipynb  todo.md  vintage_series.ipynb
data/: ces_revisions.parquet  qcew_revisions.parquet  release_dates.parquet  revisions.parquet  sae_revisions.parquet  vintage_dates.parquet
docs/: cli.md  getting-started.md  index.md
docs/api/: client.md  index.md
docs/concepts/: architecture.md  data-model.md  revision-logic.md
src/: process_ces_national.py  process_ces_states.py  process_qcew.py  vintage_series.py
src/bls_revisions/: __init__.py  __main__.py  _client.py  ces.py  qcew.py
(+473 files in other folders)
