[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bls-revisions"
version = "0.2.0"
description = "BLS revisions: release date scraping, vintage downloads, and processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastexcel>=0.19.0",
    "httpx[http2]>=0.28.1",
    "lxml>=5.0.0",
    "openpyxl>=3.1.5",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
notebooks = [
    "jupyter>=1.1.1",
]

[project.scripts]
bls-revisions = "bls_revisions.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
